# sfollow

./: README.rst  pyproject.toml  sfollow.py
sfollow/: __init__.py  __main__.py  sfollow.py  terminal.py
