[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfollow"
authors = [{name = "European XFEL GmbH", email = "da-support@xfel.eu"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/European-XFEL/sfollow"
