[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfollow"
authors = [{name = "European XFEL GmbH", email = "da-support@xfel.eu"}]
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/European-XFEL/sfollow"

[project.scripts]
sfollow = "sfollow.sfollow:main"
